--- a/scratch/src/index.css
+++ b/scratch/src/index.css
@@ -1,3 +1,8 @@
 @import "tailwindcss";
 
 @custom-variant dark (&:where(.dark, .dark *));
+
+body {
+  @apply bg-white dark:bg-gray-950;
+  @apply text-black dark:text-white;
+}
