--- a/scratch/src/index.css
+++ b/scratch/src/index.css
@@ -4,8 +4,13 @@
 
 @layer base {
   /* Customize Global Atributtes */
-  * {
-    @apply transition-all duration-300;
+
+  .animation-theme {
+    @apply transition-colors  duration-[300ms];
+  }
+
+  .animation-transform {
+    @apply transition-transform duration-[30000ms];
   }
 
   html {
@@ -13,7 +18,7 @@
   }
 
   body {
-    @apply bg-white dark:bg-gray-950 text-gray-900 dark:text-gray-100;
+    @apply bg-white dark:bg-gray-950 text-gray-900 dark:text-gray-100 transition-colors  duration-[300ms];
   }
 
   /* Customize page scale for Scrollbar that start below navbar (4rem height) */
