refactor: seperate index.css to base.css, component.css, theme.css, and utilities.css in style/.

--- a/scratch/src/index.css
+++ b/scratch/src/index.css
@@ -2,112 +2,7 @@
 
 @custom-variant dark (&:where(.dark, .dark *));
 
-@layer base {
-  /* Customize Global Atributtes */
-
-  .animation-theme {
-    @apply transition-colors  duration-[300ms];
-  }
-
-  .animation-transform {
-    @apply transition-transform duration-[30000ms];
-  }
-
-  html {
-    @apply scroll-smooth;
-  }
-
-  body {
-    @apply bg-white dark:bg-gray-950 text-gray-900 dark:text-gray-100 transition-colors  duration-[300ms];
-  }
-
-  /* Customize page scale for Scrollbar that start below navbar (4rem height) */
-  @keyframes fadeIn {
-    from {
-      opacity: 0.5;
-      transform: scale(0.98);
-    }
-    to {
-      opacity: 1;
-      transform: scale(1);
-    }
-  }
-
-  .root {
-    animation: fadeIn 100ms ease-in-out both;
-    @apply min-h-full;
-  }
-
-  nav {
-    @apply h-[4rem];
-  }
-
-  main {
-    @apply h-[calc(100vh-4rem)] overflow-y-scroll;
-  }
-
-  footer {
-    @apply h-[4rem];
-  }
-
-  /* Customize Scrollbar */
-  ::-webkit-scrollbar {
-    @apply w-1.5;
-  }
-
-  ::-webkit-scrollbar-track {
-    @apply opacity-0;
-  }
-
-  ::-webkit-scrollbar-thumb {
-    @apply bg-gray-300 rounded-full hover:bg-gray-400;
-  }
-
-  .dark ::-webkit-scrollbar-track {
-    @apply opacity-0;
-  }
-
-  .dark ::-webkit-scrollbar-thumb {
-    @apply bg-gray-600 hover:bg-gray-500;
-  }
-}
-
-@layer components {
-  .text-muted {
-    @apply text-gray-500 dark:text-gray-400;
-  }
-
-  .border {
-    @apply border-gray-200 dark:border-gray-700;
-  }
-
-  /* Customize Slate Toolbar */
-  .toolbar-container {
-    @apply bg-gray-50  dark:bg-gray-900 border-gray-200 dark:border-gray-700  text-gray-900 dark:text-gray-50 rounded-lg border shadow-sm;
-  }
-
-  .toolbar-group {
-    @apply border-gray-200 dark:border-gray-700  rounded-lg border duration-1000;
-  }
-
-  .toolbar-element {
-    @apply text-gray-700 dark:text-gray-200;
-  }
-}
-
-@layer utilities {
-  @keyframes fadeIn {
-    from {
-      opacity: 0.5;
-      transform: scale(0.98);
-    }
-    to {
-      opacity: 1;
-      transform: scale(1);
-    }
-  }
-
-  .animate-fade-in {
-    animation: fadeIn 10000ms ease-out;
-  }
-}
+@import "./styles/theme.css";
+@import "./styles/base.css";
+@import "./styles/component.css";
+@import "./styles/utilities.css";
